[B]2.1.3[/B] [I]Feb 2014[/I]
- Added Trailer button to Floor butons
- Added Media Info Popup Control
- Added Genre Fanart + icons
- Added Studio Flagging [WIP]
- SkinDefault background to Blue
- Removed reflections (Not needed with soft floor)
- Tweaked preset streaming info
- Various Bugfixes

[B]2.1.2[/B] [I]Jan 2014[/I]
- New Default Colour Blue
- Home Screen ReCoded

[B]2.0.1[/B] [I]Jan 2014[/I]
- NB! All settings to lowercase - breaking previous settings
- Bugfix font names
- BugFix Right Aligment
- Added FullWall View
- Added Support script.videoextras

[B]2.0.0[/B] [I]Jan 2014[/I]
- Initial Commit Gotham Version
