@@ -1,3 +1,7 @@
+[B]2.1.4[/B] [I]Feb 2014[/I]
+- Added Addon FanArt
+- Various BugFix & Tweaks
+
 [B]2.1.3[/B] [I]Feb 2014[/I]
 - Added Trailer button to Floor butons
 - Added Media Info Popup Control
